site: fix font flicker

--- a/apps/site/public/fonts/inter-takeout.css
+++ b/apps/site/public/fonts/inter-takeout.css
@@ -4,5 +4,5 @@
       url('subset-Inter-Black.woff') format('woff');
   font-weight: 900;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
